# p2p-chat-platform

./: Cargo.toml  Makefile  README.md
p2p-chat-server/: Cargo.toml  build.rs
p2p-chat-server/src/: main.rs
p2p-chat-server/static/: index.html
p2p-chat-wasm/: Cargo.toml
p2p-chat-wasm/src/: lib.rs
turn-server/: Cargo.toml
turn-server/src/: lib.rs
web-server/: Cargo.toml
web-server/src/: lib.rs
web-server/static/: index.html
