[workspace]
members = [
    "p2p-chat-wasm",
    "turn-server",
    "web-server",
    "p2p-chat-server",
]
resolver = "2"  # Modern dependency resolver

# Profiles for the entire workspace
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Development profile with better debug info
[profile.dev]
opt-level = 0
debug = true

# Optimize dependencies in debug mode (speeds up build without affecting debugging)
[profile.dev.package."*"]
opt-level = 1

# Special profile for the WASM build
[profile.wasm-release]
inherits = "release"
opt-level = "s"  # Optimize for size for WASM

# This section is required to ensure wasm-bindgen and wasm-opt are available
[workspace.metadata.wasm-pack]
profile = "web"
