[package]
name = "p2p-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full", "macros", "rt-multi-thread"] }  # Added macros and rt-multi-thread for #[tokio::main]
clap = { version = "4.4", features = ["derive", "env"] }     # Added env feature for environment variables
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
turn-server = { path = "../turn-server" }
web-server = { path = "../web-server" }
rust-embed = { version = "8.0", features = ["include-exclude"] }

# These dependencies aren't needed in the main crate, only during build
[build-dependencies]
wasm-pack = "0.12.1"
