[package]
name = "p2p-chat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "Event",
    "MessageEvent",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "RtcSignalingState",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10.1"
rand = "0.8"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

# No profile settings here - they're now in the workspace root
