[package]
name = "turn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
# WebRTC dependencies
webrtc-turn = "0.1.3"
webrtc-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
