[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
include_dir = "0.7"
rust-embed = { version = "8.0", features = ["include-exclude"] }
mime_guess = "2.0"
turn-server = { path = "../turn-server" }
